--- a/MZVersionCheck/MZVersionCheck-Info.plist
+++ b/MZVersionCheck/MZVersionCheck-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.mzygar.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.facebook.Facebook</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
